writeString method